--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fuyutsuki/libform",
+  "name": "inkohx/libform",
   "description": "It is a virion library that can handle various forms easily.",
   "type": "project",
   "homepage": "https://github.com/fuyutsuki/libform",
